bugfix: icon is not supported on mobile devices

--- a/src/components/widgets/Coding/Coding.scss
+++ b/src/components/widgets/Coding/Coding.scss
@@ -3,7 +3,7 @@
 summary {
     margin: 0.5em 0 0 0;
     padding: 0 0.5em;
-    z-index: 4;
+    z-index: 3;
     position: absolute;
     display: flex;
     background-color: index.$mono-color-1;
